    - Adjusted Plasma turret recipes #218
    - Advanced farming recipes now require specialized farms #226
    - Adjusted farming tech prerequisites #226
    - Other minor tweaks #220
    - Science Cost Tweaker: #232
      - All green science intermediates are craftable in an Electronics assembly machine
      - Removed Sulfur lightsource from blue science
  Bugfixes:
    - Recipes for Bob's pollution cleaning and pollution producing boards were being hidden even if Circuit Processing was disabled #215
    - Recipes for Lithium and Lithium perchlorate were showing Bob's electroliser in FNEI #224
    - Garden duplication recipes were requiring T2 farms #225
    - Calcium carbonate is now made in an Assembling machine rather than a Liquifier #220
    - Heat unusable at green science #233
    - Bob's Vehicle Equipment mod techs required disabled science packs #231
---------------------------------------------------------------------------------------------------
Version: 0.5.7
Date: 11.09.2021
  Changes:
    - Disabled Resin to Rubber recipe
    - Rebalanced Insulated wire recipe to increase rubber consumption
    - Removed Glass smelting 1 as prerequisite for Sniper Rifle
    - Reduced Electrolyser volume
    - Rebalanced Glass mixture recipes
    - Rebalanced Cement recipes
    - Added Brass and Invar smelting as prerequisites for Military science (with SCT)
    - Hid overwritten settings from Bob's Logistics
    - Standardized concrete walk speed bonuses
    - Moved Dinitrogen tetroxide gas recipe to chemical plant and added yellow metal catalyst
  Bugfixes:
    - Fixed startup error with Mad Clown's mods enabled
    - Hid gunmetal item, recipes, and tech
    - Fixed that basic steel smelting was half price
    - Removed fuel value from diesel so it would not show in helper mods
    - Fixed duplicate hazard concrete unlocks
---------------------------------------------------------------------------------------------------
Version: 0.5.6
Date: 14.08.2021
  Changes: